--- a/elk/kibana.yml
+++ b/elk/kibana.yml
@@ -1,110 +1,114 @@
----
-apiVersion: apps/v1beta1
-kind: StatefulSet
-metadata:
-  name: kibana
-  labels:
-    name: kibana
-spec:
-  serviceName: kibana
-  replicas: 1
-  updateStrategy:
-    type: RollingUpdate
-  template:
-    metadata:
-      name: kibana
-      labels:
-        name: kibana
-    spec:
-      terminationGracePeriodSeconds: 10
-      serviceAccountName: default
-      containers:
-        - name: kibana
-          image: docker.elastic.co/kibana/kibana:6.5.4
-          imagePullPolicy: Always
-          ports:
-            - containerPort: 5601
-          resources:
-            limits:
-              cpu: 1.5
-              memory: 2Gi
-            requests:
-              cpu: 1
-              memory: 1000Mi
-          volumeMounts:
-            - name: kibana-home
-              mountPath: /usr/share/kibana/config
-            - name: kibana-data
-              mountPath: /usr/share/kibana/data
-          env:
-            - name: ELASTICSEARCH_URL
-              value: http://elasticsearch-service:9200
-      securityContext:
-        fsGroup: 1000
-      volumes:
-        - name: kibana-home
-  volumeClaimTemplates:
-  - metadata:
-      name: kibana-home
-      annotations:
-        volume.beta.kubernetes.io/storage-class: managed-nfs-storage
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      resources:
-        requests:
-         storage: 10Gi
-  - metadata:
-      name: kibana-data
-      annotations:
-        volume.beta.kubernetes.io/storage-class: managed-nfs-storage
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      resources:
-        requests:
-         storage: 10Gi
+# Kibana is served by a back end server. This setting specifies the port to use.
+server.port: 5601
 
+# Specifies the address to which the Kibana server will bind. IP addresses and host names are both valid values.
+# The default is 'localhost', which usually means remote machines will not be able to connect.
+# To allow connections from remote users, set this parameter to a non-loopback address.
+server.host: "0.0.0.0"
 
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: kibana-service
-  annotations:
-    # ensure the client ip is propagated to avoid the invalid crumb issue (k8s <1.7)
-    # service.beta.kubernetes.io/external-traffic: OnlyLocal
-spec:
-  type: NodePort
-  selector:
-    name: kibana
-  # k8s 1.7+
-  externalTrafficPolicy: Local
-  ports:
-    -
-      name: http
-      port: 5601
-      targetPort: 5601
-      protocol: TCP
----
-apiVersion: extensions/v1beta1
-kind: Ingress
-metadata:
-  name: kibana
-  annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    # "413 Request Entity Too Large" uploading plugins, increase client_max_body_size
-    nginx.ingress.kubernetes.io/proxy-body-size: 50m
-    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
-    # For nginx-ingress controller < 0.9.0.beta-18
-    ingress.kubernetes.io/ssl-redirect: "true"
-    # "413 Request Entity Too Large" uploading plugins, increase client_max_body_size
-    ingress.kubernetes.io/proxy-body-size: 50m
-    ingress.kubernetes.io/proxy-request-buffering: "off"
-spec:
-  rules:
-  - http:
-      paths:
-      - path: /
-        backend:
-          serviceName: kibana
-          servicePort: 5601
-    host: kibana.example.com
+# Enables you to specify a path to mount Kibana at if you are running behind a proxy.
+# Use the `server.rewriteBasePath` setting to tell Kibana if it should remove the basePath
+# from requests it receives, and to prevent a deprecation warning at startup.
+# This setting cannot end in a slash.
+#server.basePath: ""
+path.data: "/usr/share/kibana/data"
+
+# Specifies whether Kibana should rewrite requests that are prefixed with
+# `server.basePath` or require that they are rewritten by your reverse proxy.
+# This setting was effectively always `false` before Kibana 6.3 and will
+# default to `true` starting in Kibana 7.0.
+#server.rewriteBasePath: false
+
+# The maximum payload size in bytes for incoming server requests.
+#server.maxPayloadBytes: 1048576
+
+# The Kibana server's name.  This is used for display purposes.
+#server.name: "your-hostname"
+
+# The URL of the Elasticsearch instance to use for all your queries.
+#elasticsearch.url: "http://localhost:9200"
+
+# When this setting's value is true Kibana uses the hostname specified in the server.host
+# setting. When the value of this setting is false, Kibana uses the hostname of the host
+# that connects to this Kibana instance.
+#elasticsearch.preserveHost: true
+
+# Kibana uses an index in Elasticsearch to store saved searches, visualizations and
+# dashboards. Kibana creates a new index if the index doesn't already exist.
+#kibana.index: ".kibana"
+
+# The default application to load.
+#kibana.defaultAppId: "home"
+
+# If your Elasticsearch is protected with basic authentication, these settings provide
+# the username and password that the Kibana server uses to perform maintenance on the Kibana
+# index at startup. Your Kibana users still need to authenticate with Elasticsearch, which
+# is proxied through the Kibana server.
+#elasticsearch.username: "user"
+#elasticsearch.password: "pass"
+
+# Enables SSL and paths to the PEM-format SSL certificate and SSL key files, respectively.
+# These settings enable SSL for outgoing requests from the Kibana server to the browser.
+#server.ssl.enabled: false
+#server.ssl.certificate: /path/to/your/server.crt
+#server.ssl.key: /path/to/your/server.key
+
+# Optional settings that provide the paths to the PEM-format SSL certificate and key files.
+# These files validate that your Elasticsearch backend uses the same key files.
+#elasticsearch.ssl.certificate: /path/to/your/client.crt
+#elasticsearch.ssl.key: /path/to/your/client.key
+
+# Optional setting that enables you to specify a path to the PEM file for the certificate
+# authority for your Elasticsearch instance.
+#elasticsearch.ssl.certificateAuthorities: [ "/path/to/your/CA.pem" ]
+
+# To disregard the validity of SSL certificates, change this setting's value to 'none'.
+#elasticsearch.ssl.verificationMode: full
+
+# Time in milliseconds to wait for Elasticsearch to respond to pings. Defaults to the value of
+# the elasticsearch.requestTimeout setting.
+#elasticsearch.pingTimeout: 1500
+
+# Time in milliseconds to wait for responses from the back end or Elasticsearch. This value
+# must be a positive integer.
+#elasticsearch.requestTimeout: 30000
+
+# List of Kibana client-side headers to send to Elasticsearch. To send *no* client-side
+# headers, set this value to [] (an empty list).
+#elasticsearch.requestHeadersWhitelist: [ authorization ]
+
+# Header names and values that are sent to Elasticsearch. Any custom headers cannot be overwritten
+# by client-side headers, regardless of the elasticsearch.requestHeadersWhitelist configuration.
+#elasticsearch.customHeaders: {}
+
+# Time in milliseconds for Elasticsearch to wait for responses from shards. Set to 0 to disable.
+#elasticsearch.shardTimeout: 30000
+
+# Time in milliseconds to wait for Elasticsearch at Kibana startup before retrying.
+#elasticsearch.startupTimeout: 5000
+
+# Logs queries sent to Elasticsearch. Requires logging.verbose set to true.
+#elasticsearch.logQueries: false
+
+# Specifies the path where Kibana creates the process ID file.
+#pid.file: /var/run/kibana.pid
+
+# Enables you specify a file where Kibana stores log output.
+#logging.dest: stdout
+
+# Set the value of this setting to true to suppress all logging output.
+#logging.silent: false
+
+# Set the value of this setting to true to suppress all logging output other than error messages.
+#logging.quiet: false
+
+# Set the value of this setting to true to log all events, including system usage information
+# and all requests.
+#logging.verbose: false
+
+# Set the interval in milliseconds to sample system and process performance
+# metrics. Minimum is 100ms. Defaults to 5000.
+#ops.interval: 5000
+
+# Specifies locale to be used for all localizable strings, dates and number formats.
+#i18n.locale: "en"
