--- a/elk/elasticsearch-deploy.yml
+++ b/elk/elasticsearch-deploy.yml
@@ -39,6 +39,12 @@ spec:
         fsGroup: 1000
       volumes:
         - name: elasticsearch-home
+      initContainers:
+      - image: alpine:3.6
+        command: ["/sbin/sysctl", "-w", "vm.max_map_count=262144"]
+        name: elasticsearch-logging-init
+        securityContext:
+          privileged: true
   volumeClaimTemplates:
   - metadata:
       name: elasticsearch-home
