--- a/elk/kibana-deploy.yml
+++ b/elk/kibana-deploy.yml
@@ -20,50 +20,21 @@ spec:
       serviceAccountName: default
       containers:
         - name: kibana
-          image: docker.elastic.co/kibana/kibana:6.5.4
+          image: docker.elastic.co/kibana/kibana:7.0.0
           imagePullPolicy: Always
           ports:
             - containerPort: 5601
           resources:
-            limits:
-              cpu: 1.5
-              memory: 2Gi
             requests:
-              cpu: 1
-              memory: 1000Mi
-          volumeMounts:
-            - name: kibana-home
-              mountPath: /usr/share/kibana/config
-            - name: kibana-data
-              mountPath: /usr/share/kibana/data
+              cpu: 0.3
+              memory: 500Mi
           env:
-            - name: ELASTICSEARCH_URL
+            - name: ELASTICSEARCH_HOSTS
               value: http://elasticsearch-service:9200
+            - name: XPACK_MONITORING_ENABLED
+              value: "false"
       securityContext:
         fsGroup: 1000
-      volumes:
-        - name: kibana-home
-  volumeClaimTemplates:
-  - metadata:
-      name: kibana-home
-      annotations:
-        volume.beta.kubernetes.io/storage-class: managed-nfs-storage
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      resources:
-        requests:
-         storage: 10Gi
-  - metadata:
-      name: kibana-data
-      annotations:
-        volume.beta.kubernetes.io/storage-class: managed-nfs-storage
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      resources:
-        requests:
-         storage: 10Gi
-
-
 ---
 apiVersion: v1
 kind: Service
@@ -84,27 +55,3 @@ spec:
       port: 5601
       targetPort: 5601
       protocol: TCP
----
-apiVersion: extensions/v1beta1
-kind: Ingress
-metadata:
-  name: kibana
-  annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    # "413 Request Entity Too Large" uploading plugins, increase client_max_body_size
-    nginx.ingress.kubernetes.io/proxy-body-size: 50m
-    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
-    # For nginx-ingress controller < 0.9.0.beta-18
-    ingress.kubernetes.io/ssl-redirect: "true"
-    # "413 Request Entity Too Large" uploading plugins, increase client_max_body_size
-    ingress.kubernetes.io/proxy-body-size: 50m
-    ingress.kubernetes.io/proxy-request-buffering: "off"
-spec:
-  rules:
-  - http:
-      paths:
-      - path: /
-        backend:
-          serviceName: kibana
-          servicePort: 5601
-    host: kibana.example.com
