--- a/elk/elasticsearch-deploy.yml
+++ b/elk/elasticsearch-deploy.yml
@@ -1,79 +1,151 @@
----
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: elasticsearch
   labels:
-    name: elasticsearch
+    service: elasticsearch
 spec:
-  serviceName: elasticsearch
-  replicas: 1
-  updateStrategy:
-    type: RollingUpdate
+  serviceName: es 
+  # NOTE: This is number of nodes that we want to run
+  # you may update this
+  replicas: 3 
+  selector:
+    matchLabels:
+      service: elasticsearch
   template:
     metadata:
-      name: elasticsearch
       labels:
-        name: elasticsearch
+        service: elasticsearch
     spec:
-      terminationGracePeriodSeconds: 10
-      serviceAccountName: default
-      containers:
-        - name: elasticsearch
-          image: docker.elastic.co/elasticsearch/elasticsearch:6.5.4 
-          imagePullPolicy: Always
-          ports:
-            - containerPort: 9200
-            - containerPort: 9300
-          resources:
-            limits:
-              cpu: 0.5
-              memory: 2Gi
-            requests:
-              cpu: 0.3
-              memory: 500Mi
-          volumeMounts:
-            - name: elasticsearch-home
-              mountPath: /usr/share/elasticsearch/data
-      securityContext:
-        fsGroup: 1000
-      volumes:
-        - name: elasticsearch-home
+      terminationGracePeriodSeconds: 300
       initContainers:
-      - image: alpine:3.6
-        command: ["/sbin/sysctl", "-w", "vm.max_map_count=262144"]
-        name: elasticsearch-logging-init
+      # NOTE:
+      # This is to fix the permission on the volume
+      # By default elasticsearch container is not run as
+      # non root user.
+      # https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html#_notes_for_production_use_and_defaults
+      - name: fix-the-volume-permission
+        image: busybox
+        command:
+        - sh
+        - -c
+        - chown -R 1000:1000 /usr/share/elasticsearch/data
         securityContext:
           privileged: true
+        volumeMounts:
+        - name: data
+          mountPath: /usr/share/elasticsearch/data
+      # NOTE:
+      # To increase the default vm.max_map_count to 262144
+      # https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html#docker-cli-run-prod-mode
+      - name: increase-the-vm-max-map-count
+        image: busybox
+        command:
+        - sysctl
+        - -w
+        - vm.max_map_count=262144
+        securityContext:
+          privileged: true
+      # To increase the ulimit
+      # https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html#_notes_for_production_use_and_defaults
+      - name: increase-the-ulimit
+        image: busybox
+        command:
+        - sh
+        - -c
+        - ulimit -n 65536
+        securityContext:
+          privileged: true
+      containers:
+      - name: elasticsearch
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.0.0
+        env:
+          - name: cluster.name
+            value: elasticsearch-cluster
+          - name: node.name
+            valueFrom:
+              fieldRef:
+                apiVersion: v1
+                fieldPath: metadata.name
+          - name: cluster.initial_master_nodes
+            value: elasticsearch-0,elasticsearch-1,elasticsearch-2
+          - name: network.host
+            value: 0.0.0.0
+          - name: ES_JAVA_OPTS
+            value: -Xms3g -Xmx3g
+          - name: node.data
+            value: "true"
+          - name: node.ingest
+            value: "true"
+          - name: node.master
+            value: "true"
+          - name: discovery.zen.ping.unicast.hosts
+            value: es
+        ports:
+        - containerPort: 9200
+          name: http
+        - containerPort: 9300
+          name: tcp
+        resources:
+          requests:
+            cpu: 0.5
+            memory: 1Gi
+        volumeMounts:
+        - name: data
+          mountPath: /usr/share/elasticsearch/data
   volumeClaimTemplates:
   - metadata:
-      name: elasticsearch-home
-  #    annotations:
-  #      volume.beta.kubernetes.io/storage-class: managed-nfs-storage
+      name: data
     spec:
-      accessModes: [ "ReadWriteOnce" ]
+      accessModes:
+        - ReadWriteOnce
+      storageClassName: default
       resources:
         requests:
-         storage: 10Gi
-
+          storage: 10Gi
+        volumeMounts:
+        - name: data
+          mountPath: /usr/share/elasticsearch/data
+  volumeClaimTemplates:
+  - metadata:
+      name: data
+      annotations:
+        volume.beta.kubernetes.io/storage-class: default
+    spec:
+      accessModes:
+        - ReadWriteOnce
+      resources:
+        requests:
+          storage: 10Gi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: es
+  labels:
+    service: elasticsearch
+spec:
+  clusterIP: None
+  ports:
+  - port: 9200
+    name: serving
+  - port: 9300
+    name: node-to-node
+  selector:
+    service: elasticsearch
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: elasticsearch-service
-  annotations:
-    # ensure the client ip is propagated to avoid the invalid crumb issue (k8s <1.7)
-    # service.beta.kubernetes.io/external-traffic: OnlyLocal
+  labels:
+    service: elasticsearch
 spec:
-  type: NodePort 
-  selector:
-    name: elasticsearch
-  # k8s 1.7+
-  externalTrafficPolicy: Local
+  type: LoadBalancer
   ports:
-    -
-      name: http
-      port: 9200
-      targetPort: 9200
-      protocol: TCP
-
+  - port: 9200
+    name: serving
+  - port: 9300
+    name: node-to-node
+  selector:
+    service: elasticsearch
